BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Sample_Transaction_vod__c.object
<CustomObject>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Type represents the Type of the Sample Transaction record.  The Type picklist mirrors the Record Type of the Sample Transaction and is filtered and defaulted based on Record Type of the Sample Transaction.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Adjustment_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursement_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receipt_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>U_M_vod__c</fullName>
        <description>U/M represents the Unit of Measurement of the Sample Lot for the Sample Transaction.</description>
        <label>U/M</label>
        <picklist>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Units</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unlock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unlock checkbox is used by the VBioPharma application to determine if a user has access to Unlock a Sample Transaction that has been Submitted. Access is controlled by Field Level security on the Unlock checkbox.</description>
        <label>Unlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weekend_BMS_US__c</fullName>
        <formula>CASE( MOD(DATEVALUE( CreatedDate ) - DATE(1900, 1, 7), 7), 0, 1, 6, 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekend?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_4_vod__c</fullName>
        <description>This is the zip 4 of the Address for Return Transfer and Disbursement Sample Transactions. For a Transfer To Sample Transaction this field is auto-populated based on the Selected Transfer To user and their corresponding record in the Rep Roster.</description>
        <label>Zip 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>Zip is the zip code of the Address for Return, Transfer, and Disbursement Sample Transactions. For a Transfer To Sample Transaction, this field is auto-populated based on the Selected Transfer To user and their corresponding record in the Rep Roster.</description>
        <label>Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zvod_Sample_Lines_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>placeholder for displaying multi-line sample transactions</description>
        <label>zvod Sample Lines vod</label>
        <type>Checkbox</type>
    </fields>
    <label>Sample Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sample_Adjustment_Request_BMS_Shared__c</columns>
        <columns>Sample_Adjustment_Request_RT_BMS_SHARED__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllTransactions</fullName>
        <columns>NAME</columns>
        <columns>Type_vod__c</columns>
        <columns>Sample_vod__c</columns>
        <columns>Lot_vod__c</columns>
        <columns>Quantity_vod__c</columns>
        <columns>Confirmed_Quantity_vod__c</columns>
        <columns>Transferred_From_vod__c</columns>
        <columns>Transfer_To_vod__c</columns>
        <columns>Disbursed_To_vod__c</columns>
        <columns>Status_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Transactions</label>
        <language>en_US</language>
        <sharedTo>
            <role>BMSEUENT_ENT</role>
            <roleAndSubordinates>AT00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>BE00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>ES00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>IT00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>NL00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>PL00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>RO00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>TR00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Adjustments</fullName>
        <columns>NAME</columns>
        <columns>Reason_vod__c</columns>
        <columns>Adjusted_Date_vod__c</columns>
        <columns>Sample_vod__c</columns>
        <columns>Lot_vod__c</columns>
        <columns>Quantity_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sample_Transaction_vod__c.Adjustment_vod</value>
        </filters>
        <label>All Adjustments</label>
        <language>en_US</language>
        <sharedTo>
            <role>BMSEUENT_ENT</role>
            <roleAndSubordinates>AT00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>BE00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>ES00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>IT00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>NL00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>PL00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>RO00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>TR00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Disbursements</fullName>
        <columns>NAME</columns>
        <columns>Call_Name_vod__c</columns>
        <columns>Disbursed_To_vod__c</columns>
        <columns>Sample_vod__c</columns>
        <columns>U_M_vod__c</columns>
        <columns>Lot_vod__c</columns>
        <columns>Quantity_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Signature_Date_vod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sample_Transaction_vod__c.Disbursement_vod</value>
        </filters>
        <label>All Disbursements</label>
        <language>en_US</language>
        <sharedTo>
            <role>BMSEUENT_ENT</role>
            <roleAndSubordinates>AT00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>BE00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>ES00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>IT00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>NL00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>PL00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>RO00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>TR00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Receipts</fullName>
        <columns>NAME</columns>
        <columns>Transferred_From_Name_vod__c</columns>
        <columns>Sample_vod__c</columns>
        <columns>Lot_vod__c</columns>
        <columns>Quantity_vod__c</columns>
        <columns>Received_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sample_Transaction_vod__c.Receipt_vod</value>
        </filters>
        <label>All Receipts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Returns</fullName>
        <columns>NAME</columns>
        <columns>Return_To_vod__c</columns>
        <columns>Sample_vod__c</columns>
        <columns>Lot_vod__c</columns>
        <columns>Quantity_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sample_Transaction_vod__c.Return_vod</value>
        </filters>
        <label>All Returns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Transfers</fullName>
        <columns>NAME</columns>
        <columns>Transferred_From_vod__c</columns>
        <columns>Transfer_To_vod__c</columns>
        <columns>Sample_vod__c</columns>
        <columns>Lot_vod__c</columns>
        <columns>Quantity_vod__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sample_Transaction_vod__c.Transfer_vod</value>
        </filters>
        <label>All Transfers</label>
        <language>en_US</language>
        <sharedTo>
            <role>BMSEUENT_ENT</role>
            <roleAndSubordinates>AT00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>BE00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>ES00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>IT00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>NL00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>PL00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>RO00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>TR00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alle_Abgaben_BMS_EMEA</fullName>
        <columns>NAME</columns>
        <columns>Call_Name_vod__c</columns>
        <columns>Disbursed_To_vod__c</columns>
        <columns>Sample_vod__c</columns>
        <columns>U_M_vod__c</columns>
        <columns>Lot_vod__c</columns>
        <columns>Quantity_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Signature_Date_vod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sample_Transaction_vod__c.Disbursement_vod</value>
        </filters>
        <label>Alle Abgaben</label>
        <language>en_US</language>
        <sharedTo>
            <role>BMSEUENT_ENT</role>
            <roleAndSubordinates>DE00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alle_Anpassungen_BMS_EMEA</fullName>
        <columns>NAME</columns>
        <columns>Reason_vod__c</columns>
        <columns>Adjusted_Date_vod__c</columns>
        <columns>Sample_vod__c</columns>
        <columns>Lot_vod__c</columns>
        <columns>Quantity_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sample_Transaction_vod__c.Adjustment_vod</value>
        </filters>
        <label>Alle Anpassungen</label>
        <language>en_US</language>
        <sharedTo>
            <role>BMSEUENT_ENT</role>
            <roleAndSubordinates>DE00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alle_R_cksendungen_BMS_EMEA</fullName>
        <columns>NAME</columns>
        <columns>Return_To_vod__c</columns>
        <columns>Sample_vod__c</columns>
        <columns>Lot_vod__c</columns>
        <columns>Quantity_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sample_Transaction_vod__c.Return_vod</value>
        </filters>
        <label>Alle Rücksendungen</label>
        <language>en_US</language>
        <sharedTo>
            <role>BMSEUENT_ENT</role>
            <roleAndSubordinates>DE00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alle_Transaktionen_BMS_EMEA</fullName>
        <columns>NAME</columns>
        <columns>Type_vod__c</columns>
        <columns>Sample_vod__c</columns>
        <columns>Lot_vod__c</columns>
        <columns>Quantity_vod__c</columns>
        <columns>Confirmed_Quantity_vod__c</columns>
        <columns>Transferred_From_vod__c</columns>
        <columns>Transfer_To_vod__c</columns>
        <columns>Disbursed_To_vod__c</columns>
        <columns>Status_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle Transaktionen</label>
        <language>en_US</language>
        <sharedTo>
            <role>BMSEUENT_ENT</role>
            <roleAndSubordinates>DE00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alle_Transfers_BMS_EMEA</fullName>
        <columns>NAME</columns>
        <columns>Transferred_From_vod__c</columns>
        <columns>Transfer_To_vod__c</columns>
        <columns>Sample_vod__c</columns>
        <columns>Lot_vod__c</columns>
        <columns>Quantity_vod__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sample_Transaction_vod__c.Transfer_vod</value>
        </filters>
        <label>Alle Transfers</label>
        <language>en_US</language>
        <sharedTo>
            <role>BMSEUENT_ENT</role>
            <roleAndSubordinates>DE00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Nicht_genehmigten_Muster_Anpass_BMS_EMEA</fullName>
        <columns>NAME</columns>
        <columns>Reason_vod__c</columns>
        <columns>Adjusted_Date_vod__c</columns>
        <columns>Sample_vod__c</columns>
        <columns>Lot_vod__c</columns>
        <columns>Quantity_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sample_Transaction_vod__c.Adjustment_vod</value>
        </filters>
        <label>Nicht genehmigten Muster Anpassungen</label>
        <language>en_US</language>
        <sharedTo>
            <role>BMSEUENT_ENT</role>
            <roleAndSubordinates>DE00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unapproved_Sample_Adjustments</fullName>
        <columns>NAME</columns>
        <columns>Reason_vod__c</columns>
        <columns>Adjusted_Date_vod__c</columns>
        <columns>Sample_vod__c</columns>
        <columns>Lot_vod__c</columns>
        <columns>Quantity_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sample_Transaction_vod__c.Adjustment_vod</value>
        </filters>
        <label>Unapproved Sample Adjustments</label>
        <language>en_US</language>
        <sharedTo>
            <role>BMSEUENT_ENT</role>
            <roleAndSubordinates>AT00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>BE00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>ES00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>IT00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>NL00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>PL00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>RO00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ST-{0000000}</displayFormat>
        <label>Transaction Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Transactions</pluralLabel>
    <recordTypes>
        <fullName>Adjustment_vod</fullName>
        <active>true</active>
        <description>The Adjustment Record Type provides the ability to report destroyed, stolen, or expired Sample Transactions</description>
        <label>Adjustment_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disbursement_vod</fullName>
        <active>true</active>
        <description>The Disbursement Record Type provides a read-only view of a Sample Disbursement to an Account</description>
        <label>Disbursement_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Receipt_vod</fullName>
        <active>true</active>
        <description>The Receipt Record Type provides the ability to receive Samples either from another user or from a fullfillment center.</description>
        <label>Receipt_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Return_vod</fullName>
        <active>true</active>
        <description>The Return Record Type provides the ability to report returned Sample Transactions</description>
        <label>Return_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transfer_vod</fullName>
        <active>true</active>
        <description>The Transfer Record Type provides the ability to transfer Samples to another user.</description>
        <label>Transfer_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Return_Quantity_vod</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Type_vod__c, &quot;Return_vod&quot;) ,Quantity_vod__c &lt; 1)</errorConditionFormula>
        <errorDisplayField>Quantity_vod__c</errorDisplayField>
        <errorMessage>Error: Quantity &gt; 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transfer_Quantity_vod</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Type_vod__c, &quot;Transfer_vod&quot;) ,Quantity_vod__c &lt; 1)</errorConditionFormula>
        <errorDisplayField>Quantity_vod__c</errorDisplayField>
        <errorMessage>Error: Quantity &gt; 0</errorMessage>
    </validationRules>
</CustomObject>